--- a/app/RideShareOZ/app/src/main/res/layout/activity_main.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,39 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<!--fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:id="@+id/fragment"
     android:name="com.swen900014.orange.rideshareoz.MainActivityFragment"
     tools:layout="@layout/fragment_main" android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent" /-->
+
+
+
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+android:paddingRight="@dimen/activity_horizontal_margin"
+android:paddingTop="@dimen/activity_vertical_margin"
+android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment">
+
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/sign_in_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        xmlns:android="http://schemas.android.com/apk/res/android" />
+
+    <TextView
+        android:id="@+id/sign_in_text"
+        android:text="" android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/sign_in_button"/>
+    <TextView
+        android:id="@+id/sign_in_id"
+        android:text="" android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/sign_in_text"/>
+    <TextView
+        android:id="@+id/sign_in_lang"
+        android:text="" android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/sign_in_id"/>
+
+</RelativeLayout>
