--- a/app/RideShareOZ/app/src/main/res/layout/activity_main.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/activity_main.xml
@@ -36,4 +36,14 @@ android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActi
         android:layout_height="wrap_content"
         android:layout_below="@id/sign_in_id"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sign Out"
+        android:id="@+id/sign_out_button"
+        android:layout_below="@+id/sign_in_lang"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="57dp" />
+
 </RelativeLayout>
