--- a/server/express_test/views/test.jade
+++ b/server/express_test/views/test.jade
@@ -1,9 +1,10 @@
-extends layout
+//- extends layout
 
 block content
-    h1.
-        User List
-    ul
-        each user, i in userlist
-            li
-                a(href="mailto:#{user.email}")= user.name
+    //- h1.
+        //- User List
+    p= info
+    //- ul
+        //- each user, i in userlist
+            //- li
+                //- a(href="mailto:#{user.email}")= user.name
