--- a/app/RideShareOZ/app/src/main/res/layout/activity_main.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,10 @@ android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActi
         android:id="@+id/sign_in_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        xmlns:android="http://schemas.android.com/apk/res/android" />
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_marginTop="50dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:id="@+id/sign_in_text"
@@ -41,9 +44,17 @@ android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActi
         android:layout_height="wrap_content"
         android:text="Sign Out"
         android:id="@+id/sign_out_button"
-        android:layout_below="@+id/sign_in_lang"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="57dp" />
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Query Test"
+        android:id="@+id/test_query_button"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/sign_in_button"
+        android:layout_alignEnd="@+id/sign_in_button"
+        android:layout_marginBottom="52dp" />
 
 </RelativeLayout>
