--- a/app/RideShareOZ/app/src/main/res/layout/activity_main.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/activity_main.xml
@@ -50,11 +50,39 @@ android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActi
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Query Test"
+        android:text="Json Test"
         android:id="@+id/test_query_button"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/sign_in_button"
-        android:layout_alignEnd="@+id/sign_in_button"
-        android:layout_marginBottom="52dp" />
+        android:layout_below="@+id/sign_out_button"
+        android:layout_alignLeft="@+id/sign_out_button"
+        android:layout_alignStart="@+id/sign_out_button"
+        android:layout_marginTop="66dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="All Rides"
+        android:id="@+id/all_rides"
+        android:layout_below="@+id/test_query_button"
+        android:layout_toLeftOf="@+id/test_query_button"
+        android:layout_toStartOf="@+id/test_query_button" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CreateRide"
+        android:id="@+id/create_ride"
+        android:layout_below="@+id/test_query_button"
+        android:layout_toRightOf="@+id/all_rides"
+        android:layout_toEndOf="@+id/all_rides" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="All Users"
+        android:id="@+id/all_users"
+        android:layout_alignTop="@+id/create_ride"
+        android:layout_toRightOf="@+id/create_ride"
+        android:layout_toEndOf="@+id/create_ride" />
 
 </RelativeLayout>
