--- a/app/RideShareOZ/app/src/main/res/layout/fragment_myrides.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/fragment_myrides.xml
@@ -11,7 +11,7 @@
     tools:context=".MainActivity$ForecastFragment">
 
     <ListView
-        android:id="@+id/listview_forecast"
+        android:id="@+id/listview_myrides"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
