--- a/app/RideShareOZ/app/src/main/res/layout/activity_driver_view_ride.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/activity_driver_view_ride.xml
@@ -1,109 +1,119 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:columnCount="4"
     tools:context="com.swen900014.orange.rideshareoz.DriverViewRide">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/startLabel"
+        android:id="@+id/startLabel"
+        android:layout_row="0"
+        android:layout_column="2"
+        android:layout_gravity="center_horizontal" />
 
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:columnCount="4">
+    <EditText
+        android:ems="10"
+        android:id="@+id/startText"
+        android:inputType="textPostalAddress"
+        android:layout_row="0"
+        android:layout_column="3" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/startLabel"
-            android:id="@+id/startLabel"
-            android:layout_row="0"
-            android:layout_column="2"
-            android:layout_gravity="center_horizontal" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/endLabel"
+        android:id="@+id/textView"
+        android:layout_row="1"
+        android:layout_column="2"
+        android:layout_gravity="center_horizontal" />
 
-        <EditText
-            android:ems="10"
-            android:id="@+id/startText"
-            android:inputType="textPostalAddress" />
+    <EditText
+        android:ems="10"
+        android:id="@+id/endText"
+        android:inputType="textPostalAddress|textMultiLine"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_row="1"
+        android:layout_column="3"
+        android:layout_gravity="center_horizontal" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/endLabel"
-            android:id="@+id/textView"
-            android:layout_row="1"
-            android:layout_column="2"
-            android:layout_gravity="center_horizontal" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/timeLabel"
+        android:id="@+id/timeLabel"
+        android:layout_row="2"
+        android:layout_column="2"
+        android:layout_gravity="center_horizontal" />
 
-        <EditText
-            android:ems="10"
-            android:id="@+id/endText"
-            android:inputType="textPostalAddress|textMultiLine"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="1"
-            android:layout_column="3"
-            android:layout_gravity="center_horizontal" />
+    <EditText
+        android:ems="10"
+        android:id="@+id/timeText"
+        android:inputType="date|textImeMultiLine|time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_row="2"
+        android:layout_column="3"
+        android:layout_gravity="center_horizontal" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/timeLabel"
-            android:id="@+id/timeLabel"
-            android:layout_row="2"
-            android:layout_column="2"
-            android:layout_gravity="center_horizontal" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/passLabel"
+        android:id="@+id/passLabel"
+        android:layout_row="3"
+        android:layout_column="2"
+        android:layout_gravity="top|center_horizontal"
+        android:layout_marginTop="15dp" />
 
-        <EditText
-            android:ems="10"
-            android:id="@+id/timeText"
-            android:inputType="date|textImeMultiLine|time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="2"
-            android:layout_column="3"
-            android:layout_gravity="center_horizontal" />
+    <EditText
+        android:ems="10"
+        android:id="@+id/passList"
+        android:inputType="textPostalAddress|textMultiLine"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_row="3"
+        android:layout_column="3"
+        android:layout_gravity="top|left|center_horizontal"
+        android:minHeight="150dp"
+        android:editable="false" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/passLabel"
-            android:id="@+id/passLabel"
-            android:layout_row="3"
-            android:layout_column="2"
-            android:layout_gravity="top|center_horizontal"
-            android:layout_marginTop="15dp" />
+    <ScrollView
+        android:layout_width="201dp"
+        android:layout_height="103dp"
+        android:id="@+id/scrollView"
+        android:layout_row="4"
+        android:layout_column="3"
+        android:fillViewport="true" />
 
-        <EditText
-            android:ems="10"
-            android:id="@+id/passList"
-            android:inputType="textPostalAddress|textMultiLine"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="3"
-            android:layout_column="3"
-            android:layout_gravity="top|left|center_horizontal"
-            android:minHeight="150dp"
-            android:editable="false" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/cancelButton"
+        android:id="@+id/cancelButton"
+        android:onClick="cancelRide"
+        android:layout_row="5"
+        android:layout_column="2"
+        android:layout_gravity="center"
+        android:layout_columnSpan="2" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/cancelButton"
-            android:id="@+id/cancelButton"
-            android:onClick="cancelRide"
-            android:layout_row="4"
-            android:layout_column="2"
-            android:layout_gravity="center"
-            android:layout_columnSpan="2" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/RequestLabel"
+        android:id="@+id/RequestLabel"
+        android:layout_row="4"
+        android:layout_column="2"
+        android:layout_gravity="top|center_horizontal" />
 
-
-    </GridLayout>
-</RelativeLayout>
+</GridLayout>
