--- a/app/RideShareOZ/app/src/main/res/layout/list_item_rides_linear.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/list_item_rides_linear.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="50dp">
 
     <TextView
         android:layout_width="wrap_content"
@@ -15,20 +15,33 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
-        android:id="@+id/textViewFromTo" />
+        android:id="@+id/textViewFromTo"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Small Text"
-        android:id="@+id/textViewRequests" />
+        android:id="@+id/textViewRequests"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:foreground="#ff201d"
+        android:textColor="#ff1d23" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Small Text"
-        android:id="@+id/textViewJoins" />
+        android:id="@+id/textViewJoins"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/textViewRequests"
+        android:layout_toStartOf="@+id/textViewRequests"
+        android:foreground="#0bff81"
+        android:textColor="#1affa8" />
 
-</LinearLayout>
+</RelativeLayout>
