--- a/app/RideShareOZ/app/src/main/res/layout/activity_pass_view_ride.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/activity_pass_view_ride.xml
@@ -1,166 +1,238 @@
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:columnCount="4"
-    tools:context="com.swen900014.orange.rideshareoz.PassViewRide">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context="com.swen900014.orange.rideshareoz.PassViewRide" >
 
-    <TextView
-        android:layout_width="wrap_content"
+    <GridLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/startLabel"
-        android:id="@+id/startLabel"
-        android:layout_row="0"
-        android:layout_column="2"
-        android:layout_gravity="center_horizontal" />
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:columnCount="6"
+        android:fillViewport="true" >
 
-    <EditText
-        android:ems="10"
-        android:id="@+id/startText"
-        android:inputType="textPostalAddress"
-        android:layout_row="0"
-        android:layout_column="3" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/StartPoint"
+            android:id="@+id/startLabel"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:layout_gravity="fill_horizontal|center_horizontal"
+            android:layout_marginTop="10dp"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/endLabel"
-        android:id="@+id/textView"
-        android:layout_row="1"
-        android:layout_column="2"
-        android:layout_gravity="center_horizontal" />
+        <TextView
+            android:ems="10"
+            android:id="@+id/startEditPass"
+            android:layout_row="0"
+            android:layout_column="1"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="fill_horizontal|bottom|center_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_columnSpan="5"/>
 
-    <EditText
-        android:ems="10"
-        android:id="@+id/endText"
-        android:inputType="textPostalAddress|textMultiLine"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_row="1"
-        android:layout_column="3"
-        android:layout_gravity="center_horizontal" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/endPoint"
+            android:id="@+id/endPointLabelPass"
+            android:layout_row="1"
+            android:layout_column="0"
+            android:layout_gravity="fill_horizontal|center_horizontal"
+            android:layout_marginTop="10dp"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/timeLabel"
-        android:id="@+id/timeLabel"
-        android:layout_row="2"
-        android:layout_column="2"
-        android:layout_gravity="center_horizontal" />
+        <TextView
+            android:ems="10"
+            android:id="@+id/endEditPass"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="1"
+            android:layout_column="1"
+            android:layout_gravity="fill_horizontal|bottom|center_horizontal"
+            android:layout_marginTop="10dp"
+            android:layout_columnSpan="5"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/driverLabel"
-        android:id="@+id/driverLabelPassView"
-        android:layout_row="3"
-        android:layout_column="2"
-        android:layout_gravity="center_horizontal" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/startTime"
+            android:id="@+id/timeLabel"
+            android:layout_row="2"
+            android:layout_column="0"
+            android:layout_gravity="fill_horizontal|center_horizontal"
+            android:layout_marginTop="10dp"/>
 
-    <EditText
-        android:ems="10"
-        android:id="@+id/timeText"
-        android:inputType="date|textImeMultiLine|time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_row="2"
-        android:layout_column="3"
-        android:layout_gravity="center_horizontal" />
+        <TextView
+            android:ems="10"
+            android:id="@+id/arrivalTimeEditPass"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="3"
+            android:layout_column="1"
+            android:layout_gravity="fill_horizontal|bottom|center_horizontal"
+            android:layout_marginTop="10dp"
+            android:layout_columnSpan="5"/>
 
-    <EditText
-        android:ems="10"
-        android:id="@+id/driverTextPassView"
-        android:inputType="date|textImeMultiLine|time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_row="3"
-        android:layout_column="3"
-        android:layout_gravity="center_horizontal" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/creator"
+            android:id="@+id/driverLabelPassView"
+            android:layout_row="4"
+            android:layout_column="0"
+            android:layout_gravity="fill_horizontal|center_horizontal"
+            android:layout_marginTop="10dp"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/passLabel"
-        android:id="@+id/passLabel"
-        android:layout_row="4"
-        android:layout_column="2"
-        android:layout_gravity="top|center_horizontal"
-        android:layout_marginTop="15dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/arrivalTime"
+            android:id="@+id/textView"
+            android:layout_row="3"
+            android:layout_column="0"
+            android:layout_gravity="fill_horizontal|center_horizontal"
+            android:layout_marginTop="10dp"/>
 
-    <EditText
-        android:ems="10"
-        android:id="@+id/passList"
-        android:inputType="textPostalAddress|textMultiLine"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_row="4"
-        android:layout_column="3"
-        android:layout_gravity="top|left|center_horizontal"
-        android:minHeight="150dp"
-        android:editable="false" />
+        <TextView
+            android:ems="10"
+            android:id="@+id/startTimeEditPass"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="2"
+            android:layout_column="1"
+            android:layout_gravity="fill_horizontal|bottom|center_horizontal"
+            android:layout_marginTop="10dp"
+            android:layout_columnSpan="5"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/titleLabel"
-        android:id="@+id/inputTableName"
-        android:layout_row="5"
-        android:layout_column="2"
-        android:layout_columnSpan="2" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/seats"
+            android:id="@+id/textView3"
+            android:layout_row="5"
+            android:layout_column="0"
+            android:layout_gravity="fill_horizontal|center_horizontal"
+            android:layout_marginTop="10dp"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/startLabel"
-        android:id="@+id/pickUpLabel"
-        android:layout_row="6"
-        android:layout_column="2"
-        android:layout_gravity="center_horizontal" />
+        <TextView
+            android:ems="10"
+            android:id="@+id/driverTextPassView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="4"
+            android:layout_column="1"
+            android:layout_gravity="fill_horizontal|bottom|center_horizontal"
+            android:layout_marginTop="10dp"
+            android:layout_columnSpan="5"/>
 
-    <AutoCompleteTextView
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/pickUpLocText"
-        android:layout_row="6"
-        android:layout_column="3" />
+        <TextView
+            android:ems="10"
+            android:id="@+id/seatsEditPass"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="5"
+            android:layout_column="5"
+            android:layout_gravity="fill_horizontal|bottom|center_horizontal"
+            android:layout_marginTop="10dp"
+            />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/timeLabel"
-        android:id="@+id/pickuptimeLabel"
-        android:layout_row="7"
-        android:layout_column="2"
-        android:layout_gravity="center_horizontal" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/passLabel"
+            android:id="@+id/passLabel"
+            android:layout_row="6"
+            android:layout_column="0"
+            android:layout_gravity="fill_horizontal|top|center_horizontal"
+            android:layout_marginTop="10dp" />
 
-    <EditText
-        android:ems="10"
-        android:id="@+id/pickupTimeText"
-        android:inputType="textPostalAddress"
-        android:layout_row="7"
-        android:layout_column="3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <TableLayout
+            android:id="@+id/passengerListPass"
+            android:layout_row="7"
+            android:layout_column="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_columnSpan="5"
+            android:layout_gravity="fill_horizontal|center">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/joinButton"
-        android:onClick="onClick"
-        android:layout_row="8"
-        android:layout_column="2"
-        android:layout_gravity="center_horizontal"
-        android:layout_columnSpan="2" />
+        </TableLayout>
 
-</GridLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/titleLabel"
+            android:id="@+id/inputTableName"
+            android:layout_row="8"
+            android:layout_column="0"
+            android:layout_columnSpan="6"
+            android:layout_gravity="fill_horizontal"
+            android:layout_marginTop="15dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/startLabel"
+            android:id="@+id/pickUpLabel"
+            android:layout_row="9"
+            android:layout_column="0"
+            android:layout_gravity="fill_horizontal|center_horizontal"
+            android:layout_marginTop="10dp"/>
+
+        <AutoCompleteTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/pickUpLocText"
+            android:layout_row="9"
+            android:layout_column="1"
+            android:layout_gravity="fill_horizontal"
+            android:layout_marginTop="10dp"
+            android:layout_columnSpan="5"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/timeLabel"
+            android:id="@+id/pickuptimeLabel"
+            android:layout_row="10"
+            android:layout_column="0"
+            android:layout_gravity="fill_horizontal|center_horizontal"
+            android:layout_marginTop="10dp"/>
+
+        <EditText
+            android:ems="10"
+            android:id="@+id/pickupTimeText"
+            android:inputType="textPostalAddress"
+            android:layout_row="10"
+            android:layout_column="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="fill_horizontal"
+            android:layout_marginTop="10dp"
+            android:layout_columnSpan="5"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/joinButton"
+            android:onClick="onClick"
+            android:layout_row="11"
+            android:layout_column="0"
+            android:layout_gravity="center_horizontal"
+            android:layout_columnSpan="6"
+            android:text="@string/joinButton"
+            android:layout_marginTop="10dp"/>
+
+    </GridLayout>
+</ScrollView>
