--- a/app/RideShareOZ/app/src/main/res/layout/list_user_request_row.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/list_user_request_row.xml
@@ -2,18 +2,12 @@
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal" >
+    android:orientation="vertical" >
 
-    <TableRow>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:id="@+id/userInfo" />
-    </TableRow>
-
-    <TableRow>
-
-    </TableRow>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:id="@+id/userInfo" />
 
 </TableLayout>
