--- a/app/RideShareOZ/app/src/main/res/layout/activity_user_info.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/activity_user_info.xml
@@ -7,7 +7,8 @@
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 tools:context="com.swen900014.orange.rideshareoz.UserInfoActivity"
-             android:gravity="center_vertical|center|center_horizontal">
+             android:gravity="center_vertical|center|center_horizontal"
+             android:id="@+id/userInfoTable">
 
     <TableRow
         android:layout_width="fill_parent"
