working on wbsite

--- a/server/RideShare-OZ-Server/views/index.jade
+++ b/server/RideShare-OZ-Server/views/index.jade
@@ -18,7 +18,16 @@ html(lang='en', ng-app='RDash')
     script(type='text/javascript', src='bower_components/angular-ui-router/release/angular-ui-router.min.js')
     // endbuild
     // Custom Scripts
-    script(type='text/javascript', src='javascripts/dashboard.min.js')
+    //- script(type='text/javascript', src='javascripts/dashboard.min.js')
+    //- script(type='text/javascript', src='javascripts/module.js')
+    //- script(type='text/javascript', src='javascripts/routes.js')
+    //- script(type='text/javascript', src='javascripts/controllers/alert-ctrl.js')
+    //- script(type='text/javascript', src='javascripts/controllers/master-ctrl.js')
+    //- script(type='text/javascript', src='javascripts/directives/loading.js')
+    //- script(type='text/javascript', src='javascripts/directives/widget.js')
+    //- script(type='text/javascript', src='javascripts/directives/widget-body.js')
+    //- script(type='text/javascript', src='javascripts/directives/widget-footer.js')
+    //- script(type='text/javascript', src='javascripts/directives/widget-header.js')
   body(ng-controller='MasterCtrl')
     #page-wrapper(ng-class="{'open': toggle}", ng-cloak)
       // Sidebar
