--- a/server/RideShare-OZ-Server/views/templates/tables.jade
+++ b/server/RideShare-OZ-Server/views/templates/tables.jade
@@ -1,24 +1,17 @@
-.row
-  .col-lg-6
+.row(data-ng-controller='TableCtrl')
+  .col-lg-12
     rd-widget
       rd-widget-header(icon='fa-tasks', title='Servers')
         a(href='#') Manage
       rd-widget-body(classes='medium no-padding')
         .table-responsive
-          table.table
+          table.table.table-hover
             tbody
-              tr
-                td RDVMPC001
-                td 238.103.133.37
-                td
-                  span.text-success
-                    i.fa.fa-check
-              tr
-                td RDVMPC002
-                td 68.66.63.170
-                td
-                  span.text-success
-                    i.fa.fa-check
+              tr(data-ng-repeat='group in groups', ng-click="setMemReq($index);")
+                td {{group.groupname}}
+                td {{group.location}}
+                td {{group.introduction}}
+                td {{group.group_location}}
               tr
                 td RDVMPC003
                 td 76.117.212.33
@@ -26,50 +19,8 @@
                   span.text-danger(tooltip='Server Down!')
                     i.fa.fa-warning
               tr
-                td RDPHPC001
-                td 91.88.224.5
-                td
-                  span.text-success
-                    i.fa.fa-check
-              tr
-                td RDESX001
-                td 197.188.15.93
-                td
-                  span.text-success
-                    i.fa.fa-check
-              tr
-                td RDESX002
-                td 168.85.154.251
-                td
-                  span.text-success
-                    i.fa.fa-check
-              tr
-                td RDESX003
-                td 209.25.191.61
-                td
-                  span.text-danger(tooltip='Server Down!')
-                    i.fa.fa-warning
-              tr
                 td RDESX004
                 td 252.37.192.235
-                td
-                  span.text-success
-                    i.fa.fa-check
-              tr
-                td RDTerminal01
-                td 139.71.18.207
-                td
-                  span.text-success
-                    i.fa.fa-check
-              tr
-                td RDTerminal02
-                td 136.80.122.212
-                td
-                  span.text-warning(tooltip='Could not connect!')
-                    i.fa.fa-flash
-              tr
-                td RDDomainCont01
-                td 196.80.245.33
                 td
                   span.text-success
                     i.fa.fa-check
@@ -98,72 +49,9 @@
         .table-responsive
           table.table.table-striped
             tbody
-              tr
-                td RDVMPC001
-                td 238.103.133.37
-                td
-                  span.text-success
-                    i.fa.fa-check
-              tr
-                td RDVMPC002
-                td 68.66.63.170
-                td
-                  span.text-success
-                    i.fa.fa-check
-              tr
-                td RDVMPC003
-                td 76.117.212.33
-                td
-                  span.text-danger(tooltip='Server Down!')
-                    i.fa.fa-warning
-              tr
-                td RDPHPC001
-                td 91.88.224.5
-                td
-                  span.text-success
-                    i.fa.fa-check
-              tr
-                td RDESX001
-                td 197.188.15.93
-                td
-                  span.text-success
-                    i.fa.fa-check
-              tr
-                td RDESX002
-                td 168.85.154.251
-                td
-                  span.text-success
-                    i.fa.fa-check
-              tr
-                td RDESX003
-                td 209.25.191.61
-                td
-                  span.text-danger(tooltip='Server Down!')
-                    i.fa.fa-warning
-              tr
-                td RDESX004
-                td 252.37.192.235
-                td
-                  span.text-success
-                    i.fa.fa-check
-              tr
-                td RDTerminal01
-                td 139.71.18.207
-                td
-                  span.text-success
-                    i.fa.fa-check
-              tr
-                td RDTerminal02
-                td 136.80.122.212
-                td
-                  span.text-warning(tooltip='Could not connect!')
-                    i.fa.fa-flash
-              tr
-                td RDDomainCont01
-                td 196.80.245.33
-                td
-                  span.text-success
-                    i.fa.fa-check
+              tr(data-ng-repeat='member in members')
+                td {{member.username}}
+                td {{member.phone}}
       rd-widget-footer
         ul.pagination.pagination-sm.pull-right
           li
@@ -178,3 +66,27 @@
             a(href='#') »
         .clearfix
 
+  .col-lg-6
+    rd-widget
+      rd-widget-header(icon='fa-tasks', title='Striped Servers')
+        a(href='#') Manage
+      rd-widget-body(classes='medium no-padding')
+        .table-responsive
+          table.table.table-striped
+            tbody
+              tr(data-ng-repeat='request in requests')
+                td {request.username}}
+                td {request.phone}}
+      rd-widget-footer
+        ul.pagination.pagination-sm.pull-right
+          li
+            a(href='#') «
+          li
+            a(href='#') 1
+          li
+            a(href='#') 2
+          li
+            a(href='#') 3
+          li
+            a(href='#') »
+        .clearfix
