--- a/server/RideShare-OZ-Server/views/admin.jade
+++ b/server/RideShare-OZ-Server/views/admin.jade
@@ -16,6 +16,7 @@ html(lang='en', ng-app='RDash')
     script(type='text/javascript', src='bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js')
     script(type='text/javascript', src='bower_components/angular-cookies/angular-cookies.min.js')
     script(type='text/javascript', src='bower_components/angular-ui-router/release/angular-ui-router.min.js')
+    script(type='text/javascript', src='bower_components/angularUtils-pagination/dirPagination.js')
     // endbuild
     // Custom Scripts
     script(type='text/javascript', src='javascripts/module.js')
