Implemented events page

--- a/app/RideShareOZ/app/src/main/res/layout/list_item_events_linear.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/list_item_events_linear.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="@dimen/mr_media_route_controller_art_max_height"
     android:id="@+id/listGroups">
 
     <TextView
@@ -9,7 +9,8 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Small Text"
-        android:id="@+id/textViewDate" />
+        android:id="@+id/textViewStartDate"
+        android:textColor="#10ff85" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -17,9 +18,8 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Medium Text"
         android:id="@+id/textViewName"
-        android:layout_below="@+id/textViewDate"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_below="@+id/textViewStartDate"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -39,6 +39,18 @@
         android:id="@+id/textViewLocation"
         android:layout_below="@+id/textViewDesc"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textColor="#1b28ff" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Small Text"
+        android:id="@+id/textViewEndDate"
+        android:layout_above="@+id/textViewName"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:textColor="#ff2c14" />
 
 </RelativeLayout>
