website reject and accept function

--- a/server/RideShare-OZ-Server/views/admin.jade
+++ b/server/RideShare-OZ-Server/views/admin.jade
@@ -22,6 +22,7 @@ html(lang='en', ng-app='RDash')
     script(type='text/javascript', src='javascripts/module.js')
     script(type='text/javascript', src='javascripts/routes.js')
     script(type='text/javascript', src='javascripts/controllers.js')
+    script(type='text/javascript', src='javascripts/factories.js')
     script(type='text/javascript', src='javascripts/directives/loading.js')
     script(type='text/javascript', src='javascripts/directives/widget.js')
     script(type='text/javascript', src='javascripts/directives/widget-body.js')
