intermediate step for user profile activity

--- a/app/RideShareOZ/app/src/main/res/layout/activity_profile.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/activity_profile.xml
@@ -22,8 +22,8 @@
         android:layout_below="@+id/textView7"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignRight="@+id/editLicence"
+        android:layout_alignEnd="@+id/editLicence" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -71,7 +71,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Update"
-        android:id="@+id/button"
+        android:id="@+id/btnUpdate"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
