Added about me textfield in the User Info page

--- a/app/RideShareOZ/app/src/main/res/layout/activity_user_info.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/activity_user_info.xml
@@ -166,6 +166,44 @@
 
     </TableRow>
 
+    <TableRow
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:id="@+id/aboutMeLabel"
+            android:text="@string/aboutMe"
+            android:layout_column="0"
+            android:layout_gravity="center_vertical"
+            android:layout_marginBottom="10dp"/>
+
+    </TableRow>
+
+    <TableRow
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:id="@+id/aboutMeText"
+            android:layout_column="0"
+            android:layout_marginLeft="20dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginBottom="10dp"/>
+
+    </TableRow>
+
     <GridLayout android:layout_width="match_parent"
                 android:columnCount="3"
                 android:rowCount="2"
